Added iframe and paragraph

--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jorge Argenis Mendez</title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
+  <main>
+    <section>
+      <h2 class="section-title">In Memory of Jorge Argeniz Mendez</h2>
+      <video src="/assets/JorgeTribute.mp4" controls width="85%"></video>
+    </section>
+
+
+    <section class="bottom-section">
+      <h2 class="section-title">Rest In Heaven 🙏 (05/31/1988 - 09/08/2020)
+      </h2>
+      <div class="bottom-content">
+        <div class="video-wrapper">
+          <h3>Jorge Playlist</h3>
+          <iframe src="https://www.youtube.com/embed?listType=playlist&list=PL91Gif5TCLDCXfG0WOqusnsehADBmAyKr&index=1"
+            frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="prayer">
+          <h3>Libre Soy</h3>
+          <p>No lloren por mi, porque ahora libre soy, siguiendo el sendero Dios fundo por mi voy. Tome su mano cuando
+            oi
+            su
+            llamada, di la espalda y todo lo he renunciado.</p>
+          <p>Si mi partida un vacio ha dejado, llenalo con recuerdos de gozo y agrado. La amistad compartida, una risa,
+            los
+            besos, si, estas cosas tambien yo hecho de mendos.</p>
+          <p>No se afanan con tiempos de sufrimiento, les deseo la luz del sol de manana en cada momento. Mi vida fue
+            completa saboreando en las abundancias, buenos amigos, buenos timepos, y del amor sus caricias.</p>
+          <p>Tal vez mi tiempo parecdio demasiado fugaz, con indebida tristezas no lo alargas. Levanten sus corazones en
+            la
+            paz que El nos ha dado, Dios quien me hizo ahora, El me ha liberado.</p>
+        </div>
+      </div>
+    </section>
+    </div>
+  </main>
 </body>
+
 </html>
