--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 
     <section class="bottom-section">
-      <h2 class="section-title">Rest In Heaven 🙏 (05/31/1988 - 09/08/2020)
-      </h2>
+      <h2 class="section-title">Rest In Heaven 🙏 (05/31/1988 - 09/08/2020)</h2>
       <div class="bottom-content">
         <div class="video-wrapper">
           <h3>Jorge Playlist</h3>
@@ -28,17 +27,13 @@
         <div class="prayer">
           <h3>Libre Soy</h3>
           <p>No lloren por mi, porque ahora libre soy, siguiendo el sendero Dios fundo por mi voy. Tome su mano cuando
-            oi
-            su
-            llamada, di la espalda y todo lo he renunciado.</p>
+            oi su llamada, di la espalda y todo lo he renunciado.</p>
           <p>Si mi partida un vacio ha dejado, llenalo con recuerdos de gozo y agrado. La amistad compartida, una risa,
-            los
-            besos, si, estas cosas tambien yo hecho de mendos.</p>
+            los besos, si, estas cosas tambien yo hecho de mendos.</p>
           <p>No se afanan con tiempos de sufrimiento, les deseo la luz del sol de manana en cada momento. Mi vida fue
             completa saboreando en las abundancias, buenos amigos, buenos timepos, y del amor sus caricias.</p>
           <p>Tal vez mi tiempo parecdio demasiado fugaz, con indebida tristezas no lo alargas. Levanten sus corazones en
-            la
-            paz que El nos ha dado, Dios quien me hizo ahora, El me ha liberado.</p>
+            la paz que El nos ha dado, Dios quien me hizo ahora, El me ha liberado.</p>
         </div>
       </div>
     </section>
