--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jorge Argenis Mendez</title>
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-
-<body>
-  <main>
-    <section>
-      <h2 class="section-title">In Memory of Jorge Argeniz Mendez</h2>
-      <video src="/assets/JorgeTribute.mp4" controls width="85%"></video>
-    </section>
-
-
-    <section class="bottom-section">
-      <h2 class="section-title">Rest In Heaven 🙏 (05/31/1988 - 09/08/2020)</h2>
-      <div class="bottom-content">
-        <div class="video-wrapper">
-          <h3>Jorge Playlist</h3>
-          <iframe src="https://www.youtube.com/embed?listType=playlist&list=PL91Gif5TCLDCXfG0WOqusnsehADBmAyKr&index=1"
-            frameborder="0" allowfullscreen></iframe>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body class="bg-gray-500 text-white">
+    <main>
+      <section class="">
+        <h1 class="text-center text-xl font-bold">
+          In Memory of Jorge Argeniz Mendez
+        </h1>
+      </section>
+      <section class="">
+        <h2 class="text-center">Rest In Heaven 🙏 (05/31/1988 - 09/08/2020)</h2>
+      </section>
+      <section class="flex justify-center m-3">
+        <video src="/assets/JorgeTribute.mp4" controls width="100%"></video>
+      </section>
+      <section class="text-center max-w-4xl m-auto p-2">
+        <h3 class="font-bold">Libre Soy</h3>
+        <p class="mb-3">
+          No lloren por mi, porque ahora libre soy, siguiendo el sendero Dios
+          fundo por mi voy. Tome su mano cuando oi su llamada, di la w todo lo
+          he renunciado.
+        </p>
+        <p class="mb-3">
+          Si mi partida un vacio ha dejado, llenalo con recuerdos de gozo y
+          agrado. La amistad compartida, una risa, los besos, si, estas cosas
+          tambien yo hecho de mendos.
+        </p>
+        <p class="mb-3">
+          No se afanan con tiempos de sufrimiento, les deseo la luz del sol de
+          manana en cada momento. Mi vida fue completa saboreando en las
+          abundancias, buenos amigos, buenos timepos, y del amor sus caricias.
+        </p>
+        <p class="mb-3">
+          Tal vez mi tiempo parecdio demasiado fugaz, con indebida tristezas no
+          lo alargas. Levanten sus corazones en la paz que El nos ha dado, Dios
+          quien me hizo ahora, El me ha liberado.
+        </p>
+      </section>
+      <section class="">
+        <h3 class="text-center font-bold">Jorge Playlist</h3>
+        <div class="mx-20 mb-20 mt-4 aspect-w-16 aspect-h-9">
+          <iframe
+            src="https://www.youtube.com/embed?listType=playlist&list=PL91Gif5TCLDCXfG0WOqusnsehADBmAyKr&index=1"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
         </div>
-        <div class="prayer">
-          <h3>Libre Soy</h3>
-          <p>No lloren por mi, porque ahora libre soy, siguiendo el sendero Dios fundo por mi voy. Tome su mano cuando
-            oi su llamada, di la espalda y todo lo he renunciado.</p>
-          <p>Si mi partida un vacio ha dejado, llenalo con recuerdos de gozo y agrado. La amistad compartida, una risa,
-            los besos, si, estas cosas tambien yo hecho de mendos.</p>
-          <p>No se afanan con tiempos de sufrimiento, les deseo la luz del sol de manana en cada momento. Mi vida fue
-            completa saboreando en las abundancias, buenos amigos, buenos timepos, y del amor sus caricias.</p>
-          <p>Tal vez mi tiempo parecdio demasiado fugaz, con indebida tristezas no lo alargas. Levanten sus corazones en
-            la paz que El nos ha dado, Dios quien me hizo ahora, El me ha liberado.</p>
-        </div>
-      </div>
-    </section>
-    </div>
-  </main>
-</body>
-
+      </section>
+    </main>
+  </body>
 </html>
