Fixed video src

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 class="text-center">Rest In Heaven 🙏 (05/31/1988 - 09/08/2020)</h2>
       </section>
       <section class="flex justify-center m-3">
-        <video src="./assets/JorgeTribute.mp4" controls width="100%"></video>
+        <video src="assets/JorgeTribute.mp4" controls width="100%"></video>
       </section>
       <section class="text-center max-w-4xl m-auto p-2">
         <h3 class="font-bold">Libre Soy</h3>
